Added white text border

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>About MC</h1>
-    <p>Mary Cossey was born and raised in Orlando, Florida and made the move to Tel Aviv three years ago.</p>
-    <img src="mypic.jpg" alt="MC pic">
-    <h3>She loves:</h3>
+    <p>Born and raised in Orlando, Florida - made the move to Tel Aviv three years ago.</p>
+    <img src="mypic.jpg" alt="MC pic">    
+    <div>
+        <h3>She loves:</h3>
     <ul>
         <li>Eating</li>
         <li>Travel</li>
@@ -18,5 +19,7 @@
         <li>The color green</li>
         <li>Being outside</li>
     </ul>
+    </div>
+    
 </body>
 </html>
