--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>About MC</h1>
-    <p>Born and raised in Orlando, Florida - made the move to Tel Aviv three years ago.</p>
+    <p>From Orlando, Florida - made the move to Tel Aviv three years ago.</p>
     <img src="mypic.jpg" alt="MC pic">    
     <div>
-        <h3>She loves:</h3>
+        <h3>Loves:</h3>
     <ul>
-        <li>Eating</li>
+        <li>Food</li>
         <li>Travel</li>
         <li>Animals</li>
         <li>The color green</li>
