--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>About MC</h1>
     <p>From Orlando, Florida - made the move to Tel Aviv three years ago.</p>
     <img src="mypic.jpg" alt="MC pic">    
-    <div>
+    <div class="loves">
         <h3>Loves:</h3>
     <ul>
         <li>Food</li>
@@ -20,6 +20,5 @@
         <li>Being outside</li>
     </ul>
     </div>
-    
 </body>
 </html>
